--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@prisma/client": "^6.5.0",
+    "bcrypt": "^5.1.1",
     "lodash": "^4.17.21",
     "next": "15.2.1",
     "next-auth": "^4.24.11",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
